fix(user-auth-rbac): JWT roles 改用逗号分隔字符串，彻底避免 JJWT Jackson 反序列化问题
@PreAuthorize 的 AccessDeniedException 被 Spring Security ExceptionTranslationFilter
拦截，不经过 GlobalExceptionHandler，所以后端无日志。

根因：claims.get("roles", List.class) 在 jjwt-jackson 下可能返回非 List 类型，
导致 getRoles 返回空列表 → principal 无权限 → 403。

修复：generateAccessToken 将 List 转逗号字符串存储，getRoles 用 split 解析回 List，
完全绕过 Jackson 类型擦除。

Co-Authored-By: Claude <noreply@anthropic.com>